angular-small-grid.css
.angular-small-grid-table {
    position: relative;
    overflow: hidden;
}

.angular-small-grid-header {
    overflow: hidden;
    white-space: nowrap;
}

.angular-small-grid-header-cell {
    display: inline-block;
    position: relative;
}

.angular-small-grid-resizer {
    position: absolute;
    right: 0;
    top: 0;
    width: 5px;
    bottom: 0;
    cursor: col-resize;
}

.angular-small-grid-loader {
    position: absolute;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.75);
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    padding-top: 100px;
}

.angular-small-grid-no-data {
    position: absolute;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.75);
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    padding-top: 100px;
}

.angular-small-grid-body {
    overflow: scroll;
    white-space: nowrap;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
}

.angular-small-grid-cell {
}

